--- a/index.html
+++ b/index.html
@@ -5,105 +5,37 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Uber Albalad</title>
 
-<!-- تنسيقات بسيطة -->
 <style>
-    body {
-        font-family: sans-serif;
-        margin: 0;
-        padding: 0;
-        background: #f5f5f5;
-    }
-    .topbar {
-        background: #ffcc00;
-        padding: 15px;
-        text-align: center;
-        font-size: 26px;
-        font-weight: bold;
-        color: black;
-        position: relative;
-    }
-    #adminBtn {
-        position: absolute;
-        left: 20px;
-        top: 10px;
-        background: black;
-        color: white;
-        padding: 8px 15px;
-        border-radius: 8px;
-        cursor: pointer;
-        border: none;
-    }
-    .container {
-        padding: 25px;
-        display: grid;
-        grid-template-columns: 70% 30%;
-        gap: 20px;
-    }
-    .box {
-        background: white;
-        border-radius: 12px;
-        padding: 20px;
-        box-shadow: 0 0 8px #ccc;
-    }
-    .order-card {
-        padding: 15px;
-        border-radius: 12px;
-        background: #eee;
-        margin-bottom: 15px;
-    }
-    .order-img {
-        width: 100%;
-        border-radius: 12px;
-        height: 200px;
-        object-fit: cover;
-    }
-    .btn {
-        padding: 8px 14px;
-        border: none;
-        border-radius: 6px;
-        cursor: pointer;
-    }
+    body { font-family: sans-serif; margin: 0; background: #f5f5f5; }
+    .topbar { background: #ffcc00; padding: 15px; text-align: center; font-size: 26px; font-weight: bold; position: relative; }
+    #adminBtn { position: absolute; left: 20px; top: 10px; background: black; color: white; padding: 8px 15px; border-radius: 8px; border: none; cursor: pointer; }
+    .container { padding: 25px; display: grid; grid-template-columns: 70% 30%; gap: 20px; }
+    .box { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 0 8px #ccc; }
+    .order-card { padding: 15px; border-radius: 12px; background: #eee; margin-bottom: 15px; }
+    .order-img { width: 100%; border-radius: 12px; height: 200px; object-fit: cover; }
+    .btn { padding: 8px 14px; border: none; border-radius: 6px; cursor: pointer; }
     .btn-blue { background: #1e88e5; color: white; }
     .btn-red { background: #e53935; color: white; }
-    .btn-gray { background: #777; color: white; }
     .hidden { display: none; }
-
-    /* نافذة منبثقة */
-    .modal {
-        position: fixed;
-        inset: 0;
-        background: rgba(0,0,0,0.4);
-        display: none;
-        align-items: center;
-        justify-content: center;
-    }
+    .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.4); display: none; align-items: center; justify-content: center; }
     .modal.show { display: flex; }
-    .modal-box {
-        background: white;
-        padding: 25px;
-        border-radius: 12px;
-        width: 100%;
-        max-width: 420px;
-    }
+    .modal-box { background: white; padding: 25px; border-radius: 12px; width: 100%; max-width: 420px; }
 </style>
 </head>
 
 <body>
 
-<!-- الشريط العلوي -->
 <div class="topbar">
     Uber Albalad
     <button id="adminBtn">المشرفين</button>
 </div>
 
 <div class="container">
-    <!-- قائمة الطلبات -->
     <div class="box">
         <h2>قائمة الطلبات</h2>
         <div id="ordersList">جاري التحميل...</div>
     </div>
 
-    <!-- لوحة المشرف -->
     <div class="box hidden" id="adminPanel">
         <h2>لوحة المشرف</h2>
         <button class="btn btn-blue" onclick="openAddModal()">إضافة طلب</button>
@@ -127,108 +59,94 @@
 
 <!-- Firebase -->
 <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getDatabase, ref, push, onValue, update, remove } 
-        from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
-    import { getStorage, ref as sRef, uploadBytes, getDownloadURL } 
-        from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getDatabase, ref, push, onValue, remove }
+    from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+import { getStorage, ref as sRef, uploadBytes, getDownloadURL }
+    from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
 
-    const firebaseConfig = {
-        apiKey: "AIzaSyAbMI7WprkW6WQeXp_XFToSELGnKu49OfQ",
-        authDomain: "uber-albalad.firebaseapp.com",
-        databaseURL: "https://uber-albalad-default-rtdb.firebaseio.com",
-        projectId: "uber-albalad",
-        storageBucket: "uber-albalad.appspot.com",
-        messagingSenderId: "848401880868",
-        appId: "1:848401880868:web:5801175b6991ff1ea005b1"
-    };
+const firebaseConfig = {
+    apiKey: "AIzaSyAbMI7WprkW6WQeXp_XFToSELGnKu49OfQ",
+    authDomain: "uber-albalad.firebaseapp.com",
+    databaseURL: "https://uber-albalad-default-rtdb.firebaseio.com",
+    projectId: "uber-albalad",
+    storageBucket: "uber-albalad.appspot.com",   // ← تم إصلاح الخطأ هنا
+    messagingSenderId: "848401880868",
+    appId: "1:848401880868:web:5801175b6991ff1ea005b1"
+};
 
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-    const storage = getStorage(app);
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
+const storage = getStorage(app);
 
-    let isAdmin = false;
+let isAdmin = false;
 
-    // زر المشرف
-    document.getElementById("adminBtn").onclick = function () {
-        const code = prompt("ادخل كود المشرف:");
-        if (code === "010100") {
-            isAdmin = true;
-            document.getElementById("adminPanel").classList.remove("hidden");
-            alert("تم تسجيل دخول المشرف");
-        } else {
-            alert("الكود غير صحيح");
-        }
-    };
-
-    // فتح وإغلاق نافذة الإضافة
-    function openAddModal() { document.getElementById("addModal").classList.add("show"); }
-    function closeAddModal() { document.getElementById("addModal").classList.remove("show"); }
-
-    window.openAddModal = openAddModal;
-    window.closeAddModal = closeAddModal;
-
-    // حفظ الطلب
-    async function saveOrder() {
-        const name = itemName.value;
-        const delivery = itemDelivery.value;
-        const price = itemPrice.value;
-        const file = itemImage.files[0];
-
-        if (!name || !price || !delivery || !file) {
-            alert("املأ كل البيانات");
-            return;
-        }
-
-        const imgRef = sRef(storage, "orders/" + Date.now() + "_" + file.name);
-        await uploadBytes(imgRef, file);
-        const imageURL = await getDownloadURL(imgRef);
-
-        push(ref(db, "orders"), {
-            name,
-            delivery,
-            price,
-            image: imageURL
-        });
-
-        closeAddModal();
+// زر المشرف
+document.getElementById("adminBtn").onclick = function () {
+    const code = prompt("ادخل كود المشرف:");
+    if (code === "010100") {
+        isAdmin = true;
+        document.getElementById("adminPanel").classList.remove("hidden");
+        alert("تم تسجيل دخول المشرف");
+    } else {
+        alert("الكود غير صحيح");
     }
-    window.saveOrder = saveOrder;
+};
 
-    // تحميل الطلبات
-    onValue(ref(db, "orders"), function (snapshot) {
-        const data = snapshot.val();
-        const list = document.getElementById("ordersList");
+// فتح / غلق نافذة الاضافة
+window.openAddModal = () => document.getElementById("addModal").classList.add("show");
+window.closeAddModal = () => document.getElementById("addModal").classList.remove("show");
 
-        if (!data) {
-            list.innerHTML = "لا توجد طلبات حاليا";
-            return;
-        }
+// إضافة طلب
+window.saveOrder = async function () {
+    const name = itemName.value;
+    const delivery = itemDelivery.value;
+    const price = itemPrice.value;
+    const file = itemImage.files[0];
 
-        list.innerHTML = "";
+    if (!name || !delivery || !price || !file) { alert("املأ كل البيانات"); return; }
 
-        Object.entries(data).forEach(([id, item]) => {
-            let div = document.createElement("div");
-            div.className = "order-card";
+    const imgRef = sRef(storage, "orders/" + Date.now() + "_" + file.name);
+    await uploadBytes(imgRef, file);
+    const imageURL = await getDownloadURL(imgRef);
 
-            div.innerHTML = `
-                <img class='order-img' src='${item.image}' />
-                <h3>${item.name}</h3>
-                <p>الديلفري: ${item.delivery}</p>
-                <p>السعر: ${item.price} جنيه</p>
-                ${isAdmin ? `
-                    <button class="btn btn-red" onclick="deleteOrder('${id}')">حذف</button>
-                ` : ""}
-            `;
-
-            list.appendChild(div);
-        });
+    await push(ref(db, "orders"), {
+        name, delivery, price, image: imageURL
     });
 
-    // حذف طلب
-    window.deleteOrder = function (id) {
-        remove(ref(db, "orders/" + id));
-    };
+    closeAddModal();
+};
+
+// عرض الطلبات
+onValue(ref(db, "orders"), snapshot => {
+    const data = snapshot.val();
+    const list = document.getElementById("ordersList");
+
+    if (!data) { list.innerHTML = "لا توجد طلبات"; return; }
+
+    list.innerHTML = "";
+
+    Object.entries(data).forEach(([id, item]) => {
+        let div = document.createElement("div");
+        div.className = "order-card";
+
+        div.innerHTML = `
+            <img class='order-img' src='${item.image}' />
+            <h3>${item.name}</h3>
+            <p>الديلفري: ${item.delivery}</p>
+            <p>السعر: ${item.price} جنيه</p>
+
+            ${isAdmin ? `<button class="btn btn-red" onclick="deleteOrder('${id}')">حذف</button>` : ""}
+        `;
+
+        list.appendChild(div);
+    });
+});
+
+// حذف الطلب
+window.deleteOrder = function (id) {
+    remove(ref(db, "orders/" + id));
+};
 </script>
 
 </body>
