--- a/index.html
+++ b/index.html
@@ -6,20 +6,82 @@
 <title>Uber Albalad</title>
 
 <style>
-    body { font-family: sans-serif; margin: 0; background: #f5f5f5; }
-    .topbar { background: #ffcc00; padding: 15px; text-align: center; font-size: 26px; font-weight: bold; position: relative; }
-    #adminBtn { position: absolute; left: 20px; top: 10px; background: black; color: white; padding: 8px 15px; border-radius: 8px; border: none; cursor: pointer; }
-    .container { padding: 25px; display: grid; grid-template-columns: 70% 30%; gap: 20px; }
-    .box { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 0 8px #ccc; }
-    .order-card { padding: 15px; border-radius: 12px; background: #eee; margin-bottom: 15px; }
-    .order-img { width: 100%; border-radius: 12px; height: 200px; object-fit: cover; }
-    .btn { padding: 8px 14px; border: none; border-radius: 6px; cursor: pointer; }
+    body {
+        font-family: sans-serif;
+        margin: 0;
+        padding: 0;
+        background: #f5f5f5;
+    }
+    .topbar {
+        background: #ffcc00;
+        padding: 15px;
+        text-align: center;
+        font-size: 26px;
+        font-weight: bold;
+        color: black;
+        position: relative;
+    }
+    #adminBtn {
+        position: absolute;
+        left: 20px;
+        top: 10px;
+        background: black;
+        color: white;
+        padding: 8px 15px;
+        border-radius: 8px;
+        cursor: pointer;
+        border: none;
+    }
+    .container {
+        padding: 25px;
+        display: grid;
+        grid-template-columns: 70% 30%;
+        gap: 20px;
+    }
+    .box {
+        background: white;
+        border-radius: 12px;
+        padding: 20px;
+        box-shadow: 0 0 8px #ccc;
+    }
+    .order-card {
+        padding: 15px;
+        border-radius: 12px;
+        background: #eee;
+        margin-bottom: 15px;
+    }
+    .order-img {
+        width: 100%;
+        border-radius: 12px;
+        height: 200px;
+        object-fit: cover;
+    }
+    .btn {
+        padding: 8px 14px;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+    }
     .btn-blue { background: #1e88e5; color: white; }
     .btn-red { background: #e53935; color: white; }
     .hidden { display: none; }
-    .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.4); display: none; align-items: center; justify-content: center; }
+
+    .modal {
+        position: fixed;
+        inset: 0;
+        background: rgba(0,0,0,0.4);
+        display: none;
+        align-items: center;
+        justify-content: center;
+    }
     .modal.show { display: flex; }
-    .modal-box { background: white; padding: 25px; border-radius: 12px; width: 100%; max-width: 420px; }
+    .modal-box {
+        background: white;
+        padding: 25px;
+        border-radius: 12px;
+        width: 100%;
+        max-width: 420px;
+    }
 </style>
 </head>
 
@@ -42,7 +104,6 @@
     </div>
 </div>
 
-<!-- نافذة إضافة طلب -->
 <div class="modal" id="addModal">
     <div class="modal-box">
         <h3>إضافة طلب جديد</h3>
@@ -57,96 +118,118 @@
     </div>
 </div>
 
+<!-- رفع الصور إلى Imgur -->
+<script>
+async function uploadToImgur(file) {
+    const formData = new FormData();
+    formData.append("image", file);
+
+    const res = await fetch("https://api.imgur.com/3/upload", {
+        method: "POST",
+        headers: {
+            Authorization: "Client-ID 137983a3e3f2b4a"
+        },
+        body: formData
+    });
+
+    const data = await res.json();
+    return data.data.link; // رابط الصورة
+}
+</script>
+
 <!-- Firebase -->
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getDatabase, ref, push, onValue, remove }
-    from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
-import { getStorage, ref as sRef, uploadBytes, getDownloadURL }
-    from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getDatabase, ref, push, onValue, remove } 
+        from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
-const firebaseConfig = {
-    apiKey: "AIzaSyAbMI7WprkW6WQeXp_XFToSELGnKu49OfQ",
-    authDomain: "uber-albalad.firebaseapp.com",
-    databaseURL: "https://uber-albalad-default-rtdb.firebaseio.com",
-    projectId: "uber-albalad",
-    storageBucket: "uber-albalad.appspot.com",   // ← تم إصلاح الخطأ هنا
-    messagingSenderId: "848401880868",
-    appId: "1:848401880868:web:5801175b6991ff1ea005b1"
-};
+    const firebaseConfig = {
+        apiKey: "AIzaSyAbMI7WprkW6WQeXp_XFToSELGnKu49OfQ",
+        authDomain: "uber-albalad.firebaseapp.com",
+        databaseURL: "https://uber-albalad-default-rtdb.firebaseio.com",
+        projectId: "uber-albalad",
+        storageBucket: "uber-albalad.appspot.com",
+        messagingSenderId: "848401880868",
+        appId: "1:848401880868:web:5801175b6991ff1ea005b1"
+    };
 
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
-const storage = getStorage(app);
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
 
-let isAdmin = false;
+    let isAdmin = false;
 
-// زر المشرف
-document.getElementById("adminBtn").onclick = function () {
-    const code = prompt("ادخل كود المشرف:");
-    if (code === "010100") {
-        isAdmin = true;
-        document.getElementById("adminPanel").classList.remove("hidden");
-        alert("تم تسجيل دخول المشرف");
-    } else {
-        alert("الكود غير صحيح");
+    document.getElementById("adminBtn").onclick = function () {
+        const code = prompt("ادخل كود المشرف:");
+        if (code === "010100") {
+            isAdmin = true;
+            document.getElementById("adminPanel").classList.remove("hidden");
+            alert("تم تسجيل دخول المشرف");
+        } else {
+            alert("الكود غير صحيح");
+        }
+    };
+
+    function openAddModal() { document.getElementById("addModal").classList.add("show"); }
+    function closeAddModal() { document.getElementById("addModal").classList.remove("show"); }
+    window.openAddModal = openAddModal;
+    window.closeAddModal = closeAddModal;
+
+    async function saveOrder() {
+        const name = itemName.value;
+        const delivery = itemDelivery.value;
+        const price = itemPrice.value;
+        const file = itemImage.files[0];
+
+        if (!name || !price || !delivery || !file) {
+            alert("املأ كل البيانات");
+            return;
+        }
+
+        // رفع الصورة على Imgur بدلاً من Firebase Storage
+        const imageURL = await uploadToImgur(file);
+
+        push(ref(db, "orders"), {
+            name,
+            delivery,
+            price,
+            image: imageURL
+        });
+
+        closeAddModal();
     }
-};
+    window.saveOrder = saveOrder;
 
-// فتح / غلق نافذة الاضافة
-window.openAddModal = () => document.getElementById("addModal").classList.add("show");
-window.closeAddModal = () => document.getElementById("addModal").classList.remove("show");
+    // تحميل الطلبات
+    onValue(ref(db, "orders"), function (snapshot) {
+        const data = snapshot.val();
+        const list = document.getElementById("ordersList");
 
-// إضافة طلب
-window.saveOrder = async function () {
-    const name = itemName.value;
-    const delivery = itemDelivery.value;
-    const price = itemPrice.value;
-    const file = itemImage.files[0];
+        if (!data) {
+            list.innerHTML = "لا توجد طلبات حاليا";
+            return;
+        }
 
-    if (!name || !delivery || !price || !file) { alert("املأ كل البيانات"); return; }
+        list.innerHTML = "";
 
-    const imgRef = sRef(storage, "orders/" + Date.now() + "_" + file.name);
-    await uploadBytes(imgRef, file);
-    const imageURL = await getDownloadURL(imgRef);
+        Object.entries(data).forEach(([id, item]) => {
+            let div = document.createElement("div");
+            div.className = "order-card";
 
-    await push(ref(db, "orders"), {
-        name, delivery, price, image: imageURL
+            div.innerHTML = `
+                <img class='order-img' src='${item.image}' />
+                <h3>${item.name}</h3>
+                <p>الديلفري: ${item.delivery}</p>
+                <p>السعر: ${item.price} جنيه</p>
+                ${isAdmin ? `<button class="btn btn-red" onclick="deleteOrder('${id}')">حذف</button>` : ""}
+            `;
+
+            list.appendChild(div);
+        });
     });
 
-    closeAddModal();
-};
-
-// عرض الطلبات
-onValue(ref(db, "orders"), snapshot => {
-    const data = snapshot.val();
-    const list = document.getElementById("ordersList");
-
-    if (!data) { list.innerHTML = "لا توجد طلبات"; return; }
-
-    list.innerHTML = "";
-
-    Object.entries(data).forEach(([id, item]) => {
-        let div = document.createElement("div");
-        div.className = "order-card";
-
-        div.innerHTML = `
-            <img class='order-img' src='${item.image}' />
-            <h3>${item.name}</h3>
-            <p>الديلفري: ${item.delivery}</p>
-            <p>السعر: ${item.price} جنيه</p>
-
-            ${isAdmin ? `<button class="btn btn-red" onclick="deleteOrder('${id}')">حذف</button>` : ""}
-        `;
-
-        list.appendChild(div);
-    });
-});
-
-// حذف الطلب
-window.deleteOrder = function (id) {
-    remove(ref(db, "orders/" + id));
-};
+    window.deleteOrder = function (id) {
+        remove(ref(db, "orders/" + id));
+    };
 </script>
 
 </body>
