--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
 
         <input id="itemName" type="text" placeholder="اسم المنتج" style="width:100%;margin-bottom:10px;">
         <input id="itemDelivery" type="text" placeholder="رقم الديلفري" style="width:100%;margin-bottom:10px;">
-        <input id="itemPrice" type="text" placeholder="السعر" style="width:100%;margin-bottom:10px;">
         <input id="itemImage" type="file" style="margin-bottom:10px;">
 
         <button class="btn btn-blue" onclick="saveOrder()">حفظ</button>
@@ -118,26 +117,6 @@
     </div>
 </div>
 
-<!-- رفع الصور إلى Imgur -->
-<script>
-async function uploadToImgur(file) {
-    const formData = new FormData();
-    formData.append("image", file);
-
-    const res = await fetch("https://api.imgur.com/3/upload", {
-        method: "POST",
-        headers: {
-            Authorization: "Client-ID 137983a3e3f2b4a"
-        },
-        body: formData
-    });
-
-    const data = await res.json();
-    return data.data.link; // رابط الصورة
-}
-</script>
-
-<!-- Firebase -->
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { getDatabase, ref, push, onValue, remove } 
@@ -156,6 +135,8 @@ async function uploadToImgur(file) {
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
+    const IMGBB_KEY = "68c540b347198695d555d31b09a23bd1";  // ← API KEY الجديد
+
     let isAdmin = false;
 
     document.getElementById("adminBtn").onclick = function () {
@@ -171,35 +152,46 @@ async function uploadToImgur(file) {
 
     function openAddModal() { document.getElementById("addModal").classList.add("show"); }
     function closeAddModal() { document.getElementById("addModal").classList.remove("show"); }
+
     window.openAddModal = openAddModal;
     window.closeAddModal = closeAddModal;
+
+    async function uploadImage(file) {
+        const form = new FormData();
+        form.append("image", file);
+
+        const res = await fetch(
+            `https://api.imgbb.com/1/upload?key=${IMGBB_KEY}`,
+            { method: "POST", body: form }
+        );
+
+        const data = await res.json();
+        return data.data.url;
+    }
 
     async function saveOrder() {
         const name = itemName.value;
         const delivery = itemDelivery.value;
-        const price = itemPrice.value;
         const file = itemImage.files[0];
 
-        if (!name || !price || !delivery || !file) {
+        if (!name || !delivery || !file) {
             alert("املأ كل البيانات");
             return;
         }
 
-        // رفع الصورة على Imgur بدلاً من Firebase Storage
-        const imageURL = await uploadToImgur(file);
+        const imageURL = await uploadImage(file);
 
         push(ref(db, "orders"), {
             name,
             delivery,
-            price,
             image: imageURL
         });
 
         closeAddModal();
     }
+
     window.saveOrder = saveOrder;
 
-    // تحميل الطلبات
     onValue(ref(db, "orders"), function (snapshot) {
         const data = snapshot.val();
         const list = document.getElementById("ordersList");
@@ -219,7 +211,6 @@ async function uploadToImgur(file) {
                 <img class='order-img' src='${item.image}' />
                 <h3>${item.name}</h3>
                 <p>الديلفري: ${item.delivery}</p>
-                <p>السعر: ${item.price} جنيه</p>
                 ${isAdmin ? `<button class="btn btn-red" onclick="deleteOrder('${id}')">حذف</button>` : ""}
             `;
 
